# semantic-search

./: .gitignore
backend/: app.py  pyproject.toml
backend/src/: embed.py  hyphoteticalDocument.py  io.py
backend/src/query/: hyphoteticalDocument.py
frontend/: package.json
