[tool.poetry]
name = "semantic-search"
version = "0.1.0"
description = ""
authors = ["Sean Blizard <emailseanblizard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
openai = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
