[tool.poetry]
name = "semantic-search"
version = "0.1.0"
description = ""
authors = ["Sean Blizard <emailseanblizard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
openai = "^1.51.0"
pydantic = "^2.9.2"
pinecone = {extras = ["grpc"], version = "^5.3.1"}
python-multipart = "^0.0.12"
pdfplumber = "^0.11.4"
docx = "^0.2.4"
mammoth = "^1.8.0"
semantic-text-splitter = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
